--- a/app/tpl/fragment/_header_login.html
+++ b/app/tpl/fragment/_header_login.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>WS - Login</title>
+<title>NebulaV2</title>
  {function="Web_Application::loadCssResource('bootstrap.min')"}
  {function="Web_Application::loadCssResource('bootstrap-responsive.min')"}
   
@@ -52,6 +52,6 @@
 <body>
 <div class="navbar" style="margin-top:-40px;">
   <div class="navbar-inner">
-    <a class="brand" href="#"> {function="Web_Application::loadImageResource('database-process-icon','png')"} Web Process Manager</a>
+    <a class="brand" href="#"> {function="Web_Application::loadImageResource('database-process-icon','png')"} NebulaV2</a>
   </div>
 </div>
