--- a/app/tpl/login.html
+++ b/app/tpl/login.html
@@ -2,7 +2,7 @@
 <div class="container">
 <div class="row" >
 	<div class="span6  form-signin" style="background:#eeeeee;">
-		{include="fragment/_help_login"}
+		{include="fragment/_login_message"}
 	</div>
 	<div class="span6">
       <form class="form-signin" action="" method="post">
