--- a/app/tpl/fragment/_footer.html
+++ b/app/tpl/fragment/_footer.html
@@ -1,6 +1,6 @@
 </div>
 </div>
-<footer class="navbar navbar-fixed-bottom" style="color:#006699; font-size:10px;padding-left:18px;">&copy; BB 2013 - Based on WS Framework</footer>
+<footer class="navbar navbar-fixed-bottom" style="color:#006699; font-size:10px;padding-left:18px;">&copy; NebulaV2 GPL V3</footer>
 	<script>
 		
 		$(function(){
