new versione start 1.0
NebulaCloud branch start

--- a/app/tpl/fragment/_header.html
+++ b/app/tpl/fragment/_header.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="ISO-8859-1">
-<title>StealthCloud</title>
+<title>{$title}</title>
 
 <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css#">
