--- a/app/tpl/login.html
+++ b/app/tpl/login.html
@@ -4,17 +4,15 @@
 	<div class="col-md-4">
     	<div class="jumbotron">
 			<i class="fa fa-soundcloud fa-5x"></i>
-		  	<p>Gestione Processi Cloud</p>
+		  	<p>Gestione Processi Cloud {$title}</p>
 		  	<p></p>
 		</div>  	
-      	
-      	
 	</div>
 	<div class="col-md-4">
 		<form class="form-horizontal" action="" method="post">
 	  		<input type="hidden" name="resource" value="{function="Web_Application::$_page_next_login"}" />
 	  		<fieldset>
-	    		<legend>Login EbooksCLOUD Admin Panel</legend>
+	    		<legend>Login Admin Panel</legend>
 	    			<div class="form-group">
 				      	<label for="inputEmail" class="col-lg-2 control-label">Username</label>
 				      	<div class="col-lg-10">
