--- a/app/tpl/fragment/_menu.html
+++ b/app/tpl/fragment/_menu.html
@@ -1,7 +1,7 @@
 <div class="navbar navbar-default navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
-          <a href="./#" class="navbar-brand"><i class="fa fa-soundcloud"></i>&nbsp;EbooksCLOUD</a>
+          <a href="./#" class="navbar-brand"><i class="fa fa-soundcloud"></i>&nbsp;{$brand}</a>
           <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-main">
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
@@ -11,7 +11,7 @@
         <div class="navbar-collapse collapse" id="navbar-main">
             {if condition="$user->_username != 'Guest'"}
 			<ul class="nav navbar-nav">
-				<li><a href="#" class="ui-ajax" data-link="ebooks"> Ebooks</a></li>
+				
 			</ul>
 
 
